@@ -26,8 +26,9 @@ $moduleDirNameUpper = \mb_strtoupper($moduleDirName);
 // ------------------- Informations ------------------- //
 $modversion = [
     'version'             => '1.2.1',
-    'module_status'       => 'RC1',
-    'release_date'        => '2023/04/13', // format: yyyy/mm/dd
+    'module_status'       => 'Stable',
+    'release'             => '07/06/2025',
+    'release_date'        => '2025/06/07', // format: yyyy/mm/dd
     'name'                => \_MI_WGGALLERY_NAME,
     'description'         => \_MI_WGGALLERY_DESC,
     'author'              => 'Wedega',
@@ -56,7 +57,6 @@ $modversion = [
     'support_name'        => 'Wedega - Webdesign Gabor',
     'module_website_url'  => 'https://xoops.wedega.com',
     'module_website_name' => 'Wedega XOOPS Demo Site',
-    'release'             => '13/04/2023',
     'system_menu'         => 1,
     'hasAdmin'            => 1,
     'hasMain'             => 1,
