@@ -1,3 +1,7 @@
+<h5>1.2.1 Stable</h5>  [2025/06/07]
+<hr>
+ - last version for PHP 7 (goffy)
+ 
 <h5>1.2.1 RC1</h5>  [2023/03/09]
 <hr>
  - fixed missing default value smarty (goffy)
